# RPHE

./: .gitignore  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-installers.yml  security.yml  tests.yml
docs/: GMAIL_SETUP.md
docs/superpowers/plans/: 2026-06-14-risk-dashboard.md
docs/superpowers/specs/: 2026-06-14-risk-dashboard-design.md
packaging/: RPHE.icns  build_macos.sh  build_windows.ps1  fetch_bw.py  make_icon.py  rphe_gui.spec  rphe_launch.py
rphe/: __init__.py  __main__.py  audit.py  breach.py  classifier.py  cli.py  config.py  engine.py  gui.py  gui_setup.py  linksafety.py  models.py  notify.py  passkeys.py  passwords.py  providers.py  risk.py  samples.py  schedule.py  secrets.py  snapshot.py
rphe/reset/: __init__.py  orchestrator.py
rphe/scanners/: __init__.py  base.py  eml_scanner.py  gmail_scanner.py  graph_scanner.py  imap_scanner.py
rphe/vaults/: __init__.py  base.py  bitwarden.py  nordpass.py  sync.py
tests/: test_bitwarden_logic.py  test_breach.py  test_candidates_passkeys.py  test_classifier.py  test_config_roundtrip.py  test_dashboard_engine.py  test_diagnose.py  test_eml_scanner.py  test_find_bw.py  test_gmail_decode.py  test_linksafety.py  test_nordpass_perms.py  test_notify_injection.py  test_passwords.py  test_providers.py  test_reset_redirect.py  test_risk_model.py  test_samples.py  test_scan_errors.py  test_schedule_notify.py  test_snapshot.py  test_vault_audit.py
